<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordGuess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="Ñ">Ñ</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="word">Palabra</string>
    <string name="definition">Definición:</string>
    <string name="write_word">Respuesta:</string>
    <string name="words_json_array_name">words</string>
    <string name="word_name_json">word</string>
    <string name="word_starts_json">starts</string>
    <string name="definitions_json_array_name">definitions</string>
    <string name="send_button_text">Enviar</string>
    <string name="next_button_text">Siguiente</string>

    <string-array name="spanish_alphabet">
        <item>@string/A</item>
        <item>@string/B</item>
        <item>@string/C</item>
        <item>@string/D</item>
        <item>@string/E</item>
        <item>@string/F</item>
        <item>@string/G</item>
        <item>@string/H</item>
        <item>@string/I</item>
        <item>@string/J</item>
        <item>@string/K</item>
        <item>@string/L</item>
        <item>@string/M</item>
        <item>@string/N</item>
        <item>@string/Ñ</item>
        <item>@string/O</item>
        <item>@string/P</item>
        <item>@string/Q</item>
        <item>@string/R</item>
        <item>@string/S</item>
        <item>@string/T</item>
        <item>@string/U</item>
        <item>@string/V</item>
        <item>@string/W</item>
        <item>@string/X</item>
        <item>@string/Y</item>
        <item>@string/Z</item>
    </string-array>

    <string name="state_map">wordMap</string>
    <string name="activeLetter">activeLetter</string>
    <string name="debug">debug</string>
    <string name="timer">timer</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="pref_timeout_key">timeout</string>
    <string name="pref_timeout_title">Tiempo de juego</string>
    <string name="pref_timeout_summary">Tiempo disponible para acertar todas las palabras.</string>
    <string name="remaining_key">remaining_time</string>
    <string name="pref_timeout_default_str">60</string>
    <string name="pref_precharged_words_title">Palabras precargadas</string>
    <string name="pref_precharged_words_key">precharged_words</string>
    <string name="pref_precharged_words_summary">Número de palabras cargadas antes de comenzar la partida</string>
    <string name="pref_precharged_words_default">1</string>
    <string name="creating_game">Creando partida</string>
    <string name="looking_for_word">Buscando palabra que empiece por </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_game">Partida Nueva</string>
    <string name="continue_game">Continuar</string>
    <string name="save_word_name_json">word_name</string>
    <string name="save_act_definition_json">definition</string>
    <string name="save_starts_word_json">starts</string>
    <string name="action_save">Guardar y Salir</string>
    <string name="save_file">save_file</string>
    <string name="save_pair_json_first">word</string>
    <string name="save_pair_json_second">state</string>
    <string name="save_json_state_map">stateMap</string>
    <string name="save_time_json">remainingTime</string>
    <string name="save_active_word">activeWord</string>
    <string name="continue_game_intent_action">android.wordguess.action.CONTINUE_GAME</string>
    <string name="new_game_intent_action">android.wordguess.action.NEW_GAME</string>

</resources>
